# XBRLValidator

./: .env.example  .gitignore  .importlinter  AGENT_PLAN.md  CHANGELOG.md  Dockerfile  Dockerfile.worker  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: default.yaml  error_codes.yaml
src/: __init__.py
src/api/: __init__.py  app.py
src/cli/: __init__.py  conform.py  main.py  taxonomy.py
src/core/: __init__.py  constants.py  exceptions.py  qname.py  types.py
src/core/model/: __init__.py  builder.py  builder_oim.py  builder_streaming.py  concept.py  context.py  equivalence.py  fact.py  indexes.py  instance.py  merge.py  oim_model.py  unit.py  xbrl_model.py
src/core/networks/: __init__.py  linkbase_parser.py  relationship.py
src/core/parser/: __init__.py  csv_parser.py  datetime_parser.py  decimal_parser.py  format_detector.py  ixbrl_continuation.py  ixbrl_parser.py  ixbrl_transforms.py  json_parser.py  package_parser.py  transform_registry.py  xml_parser.py
src/core/parser/streaming/: __init__.py  chunked_reader.py  csv_streamer.py  disk_spill.py  fact_index.py  fact_store.py  json_streamer.py  memory_budget.py  mmap_reader.py  sax_handler.py  sax_ixbrl_handler.py
src/core/taxonomy/: __init__.py  cache.py  catalog.py  concept_index.py  loader.py  package.py  resolver.py  schema.py
src/plugin/: __init__.py  profile_loader.py
src/plugin/yaml_rules/: rule_engine.py
src/report/: __init__.py  formatter.py
src/report/templates/: report.html.j2
src/security/: __init__.py  entity_limits.py  url_allowlist.py  xxe_guard.py  zip_guard.py
src/utils/: __init__.py  datetime_utils.py  decimal_utils.py  hash_utils.py  locale_utils.py  logging_config.py  qname.py  size_utils.py  xml_utils.py  zip_utils.py
src/validator/: __init__.py  base.py  error_catalog.py  message.py
src/validator/regulator/: __init__.py
src/validator/regulator/cipc/: __init__.py
src/validator/regulator/efm/: __init__.py  efm_profile.py  efm_validator.py
src/validator/regulator/esef/: __init__.py
src/validator/regulator/ferc/: __init__.py
src/validator/regulator/hmrc/: __init__.py
src/validator/regulator/mca/: __init__.py
src/validator/spec/: __init__.py  calculation.py  definition.py  dimensions.py  formula.py  inline.py  label.py  presentation.py  table.py  xbrl21.py
src/validator/spec/calculation/: __init__.py  calc_validator.py
src/validator/spec/dimensions/: __init__.py  dimension_validator.py
src/validator/spec/inline/: __init__.py  ixbrl_validator.py
src/validator/spec/xbrl21/: __init__.py  instance_validator.py
tests/: conftest.py  test_parser.py
tests/unit/core/model/: test_model.py
xbrl_validator/: __init__.py  parser.py
