[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "xbrl-validator"
version = "1.0.0"
description = "Enterprise-grade XBRL/iXBRL validation engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
  "lxml>=5.1.0",
  "defusedxml>=0.7.1",
  "jsonschema>=4.21.0",
  "orjson>=3.10.0",
  "ijson>=3.2.3",
  "polars>=0.20.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
  "celery[redis]>=5.3.6",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.29",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "jinja2>=3.1.3",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "msgpack>=1.0.8",
  "psutil>=5.9.8",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
ai = ["openai>=1.14.0"]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.3.1",
  "pytest-benchmark>=4.0.0",
  "mypy>=1.9.0",
  "ruff>=0.3.0",
  "hypothesis>=6.98.0",
]

[project.scripts]
xbrl-validate = "src.cli.main:app"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow",
  "large_file: marks tests requiring large file generation",
  "conformance: marks conformance suite tests",
  "e2e: marks end-to-end tests",
]
