[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbrl-validator"
version = "1.0.0"
description = "Regulator-grade XBRL/iXBRL validator engine"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "XBRLValidator Team"}]
readme = "README.md"
dependencies = [
  "lxml>=5.1.0",
  "defusedxml>=0.7.1",
  "html5lib>=1.1",
  "ijson>=3.2.3",
  "orjson>=3.10.0",
  "jsonschema>=4.21.0",
  "polars>=0.20.0",
  "python-dateutil>=2.9.0",
  "isodate>=0.6.1",
  "elementpath>=4.4.0",
  "msgpack>=1.0.8",
  "diskcache>=5.6.3",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "celery[redis]>=5.3.6",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.29",
  "alembic>=1.13.0",
  "typer[all]>=0.12.0",
  "rich>=13.7.0",
  "jinja2>=3.1.3",
  "pydantic>=2.6.0",
  "structlog>=24.1.0",
  "psutil>=5.9.8",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
ai = ["anthropic>=0.25.0", "openai>=1.14.0"]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.3.1",
  "pytest-benchmark>=4.0.0",
  "pytest-xdist>=3.5.0",
  "hypothesis>=6.98.0",
  "mypy>=1.9.0",
  "ruff>=0.3.0",
  "import-linter>=2.0",
  "black>=24.3.0",
]
conformance = ["pytest-xdist>=3.5.0", "tabulate>=0.9.0"]

[project.scripts]
xbrl-validate = "src.cli.main:app"
xbrl-taxonomy = "src.cli.taxonomy:app"
xbrl-conform = "src.cli.conform:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "conformance: conformance suite tests",
  "security: security tests",
  "large_file: large file tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
